CFR-75911 - Messages to the scroll top. Fixed layout bug in IE

--- a/forgerock-ui-user/src/main/resources/css/user/forms.less
+++ b/forgerock-ui-user/src/main/resources/css/user/forms.less
@@ -384,6 +384,7 @@ form.form {
 
     .field-rule{
         padding:2px 0 0;
+        clear: left;
     }
 
     .group-field-row.group-field-short label{
