--- a/forgerock-ui-user/src/main/resources/css/user/layout.less
+++ b/forgerock-ui-user/src/main/resources/css/user/layout.less
@@ -208,10 +208,11 @@
 
 #messages {
 
-    position: absolute;
+    position: fixed;
     top: 50px;
     left: 10px;
     right: 10px;
+    z-index:2;
 
     div {
         
